<resources>
    <string name="app_name">Aids Drug Info</string>

    <string-array name="list">
        <item>Drug 1</item>
        <item>Drug 2</item>
        <item>Drug 3</item>
        <item>Drug 4</item>
        <item>Drug 5</item>
    </string-array>

    <string name="content_authority">com.example.android.aidsdruginformation</string>

    <string name="widget_title">Drugs</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="approved_use_default">Treatment of HIV Infection</string>
    <string name="approved_use_header">Approved Use</string>
    <string name="compay_default">Gilead Sciences</string>
    <string name="company_header">Company</string>
    <string name="drug_class_default">Combination Drugs</string>
    <string name="drug_class_header">Class</string>
    <string name="approval_status_default">FDA-approved</string>
    <string name="approval_status_header">Approval Status</string>
</resources>
